--- a/submissions/sub2.tex
+++ b/submissions/sub2.tex
@@ -145,8 +145,8 @@
 	expected a 4 times speed-up. However, it does only run 40\% faster.
 
 	A hypothesis for this speed-up observed is that the process of opening and
-	clossing threads in each time step leads to an important lose of
-	speed. Another source of lose of speed in our implementation is the
+	clossing threads in each time step leads to an important loss of
+	speed. Another source of loss of speed in our implementation is the
 	reallocation of terms in the matrix. However, it helps us saving memory,
 	so we consider that it is not actually a loss of efficiency, only of speed.
 
